Fix dependency resolution of license-gradle-plugin

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Gradle repositories and dependencies
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
     }
     dependencies {
