Split Gradle setup into reusable files

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 sudo: false
+
 language: java
 jdk:
   - openjdk6
   - openjdk7
   - oraclejdk7
   - oraclejdk8
+
 env: GRADLE_OPTS="-Xms1g -Xmx3g"
 install: true
-script: gradle build
+script: ./gradlew build
+
 notifications:
   email: false
