--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,4 @@
-theName=SpongeAPI
-inceptionYear=2014
-packaging=jar
-url=http://spongepowered.org
-description=SpongeAPI
+name=SpongeAPI
+description=A Minecraft plugin API
+url=https://www.spongepowered.org
 organization=SpongePowered
